Update build.gradle for moqui-ai